# mlcast-dataset-DMI-radar_precipitation

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/: config.py  conversion.py  utils.py
