[project]
name = "mlcast-dataset-DMI"
version = "0.1.0"
description = "Default uv template"
authors = [
    {name = "Ricardo Jara", email ="arjj@dmi.dk"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.7.0",
    "einops>=0.8.1",
    "h5netcdf>=1.6.1",
    "h5py>=3.13.0",
    "json-tricks>=3.17.3",
    "logging>=0.5.1.2",
    "memory-profiler>=0.61.0",
    "omegaconf>=2.3.0",
    "pyarrow>=21.0.0",
    "pygrib>=2.1.6",
    "pykdtree>=1.4.1",
    "pyproj>=3.7.1",
    "pyresample>=1.31.0",
    "pytz>=2025.2",
    "pywavelets>=1.8.0",
    "pyyaml>=6.0.2",
    "shapely>=2.1.0",
    "toolz>=1.0.0",
    "tqdm>=4.67.1",
    "xarray>=2024.11.0",
    "xradar>=0.9.0",
    "zarr==2.13.6",
    "numpy==1.26.0",
    "pandas>=2.1",
    "numcodecs==0.11.0",
    "cartopy>=0.25.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

